--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0; url=https://www.volgamo.com/UnsDecath">
+    <meta http-equiv="refresh" content="0; url=http://yansin.store/?act=un&pid=0_mt&uid=1&vid=65&ofid=24&lid=0&cid=0">
     <title>Unsubscribe</title>
 </head>
 <body>
